--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: home
         I use it to write about topics that are on my mind, and 
         structure my resulting thoughts and worldview. 
         You will likely find more questions here than answers, 
-        though, hopefully, some answers may break through. 
+        though, hopefully, some answers may break through. You can learn more about me under the <a href="/about">about</a> page.
         <br>
         <br>
         I also write fiction, mainly short stories, which you can find <a href="/fiction">here</a>.
