New draft for climate; css changes

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: home
         <br>
         The spirit of this blog is "thinking in public". 
         I use it to write about topics that are on my mind.
-        Most posts on here actually fall more along the lines of <a href="/blog">essays</a> than blogs, and a few are <a href="/fiction">fictional short stories</a>.
+        Most posts on here fall more along the lines of <a href="/blog">essays</a> than blogs, and a few are <a href="/fiction">fictional short stories</a>.
         <br>
         <br>
-        Listed below you will find the full collection of both writing categories (essays and fiction) in chronological order.
+        Listed below you will find the full collection of my writing (essays and fiction) in chronological order.
     </div>
 </article>
