About page update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: home
         <br>
         <br>
         The spirit of this blog is "thinking in public". 
-        I use it to write about topics that are on my mind.
+        I use it to structure my thoughts on topics I'm interested in.
         Most posts on here actually fall more along the lines of <a href="/blog">essays</a> than blogs, and a few are <a href="/fiction">fictional short stories</a>.
         <br>
         <br>
